Fix jjie/yt template to match location of largo theme

--- a/wp-content/themes/youth-today/style.css
+++ b/wp-content/themes/youth-today/style.css
@@ -4,7 +4,7 @@ Theme URI:      http://largoproject.org
 Description:    A child theme for Youth Today based on the Project Largo parent theme.
 Author:         Matthew Russo/Blast Brand
 Author URI:     http://blastbrand.com
-Template:       largo-dev
+Template:       largo
 Version:        0.2.0
 */
 
