--- a/wp-content/themes/jjie/style.css
+++ b/wp-content/themes/jjie/style.css
@@ -4,7 +4,7 @@ Theme URI:      http://largoproject.org
 Description:    A child theme for JJIE based on the Project Largo parent theme, version 0.5
 Author:         The INN Nerds
 Author URI:     http://nerds.inn.org
-Template:       largo-dev
+Template:       largo
 Version:        0.2
 */
 @import "css/style.css";
