--- a/wp-content/themes/jjie/css/style.css
+++ b/wp-content/themes/jjie/css/style.css
@@ -1,5 +1,4 @@
 @import url('//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic');
-/* Largo essentials */
 /*
  * Ads
  */
@@ -35,6 +34,16 @@
   padding-right: 0;
   display: inline;
 }
+@media only screen and (max-width: 529px) {
+  #homepage-triple-widget .span4 {
+    margin: 0 auto 12px;
+    clear: both;
+    padding: 0;
+    width: 300px;
+    float: none;
+  }
+}
+/* Largo essentials */
 article,
 aside,
 details,
@@ -132,43 +141,6 @@ textarea {
   overflow: auto;
   vertical-align: top;
 }
-.clearfix {
-  *zoom: 1;
-}
-.clearfix:before,
-.clearfix:after {
-  display: table;
-  content: "";
-}
-.clearfix:after {
-  clear: both;
-}
-.visuallyhidden {
-  position: absolute;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  width: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-}
-.hide-text {
-  font: 0/0 a;
-  color: transparent;
-  text-shadow: none;
-  background-color: transparent;
-  border: 0;
-}
-.input-block-level {
-  display: block;
-  width: 100%;
-  min-height: 28px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-}
 /**
  * @group Color
  * @label Base Color (used for navbar, widget titles, etc.)
@@ -258,6 +230,43 @@ textarea {
  * @type text
  * @default_value 1.5
  */
+.clearfix {
+  *zoom: 1;
+}
+.clearfix:before,
+.clearfix:after {
+  display: table;
+  content: "";
+}
+.clearfix:after {
+  clear: both;
+}
+.visuallyhidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
+.hide-text {
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}
+.input-block-level {
+  display: block;
+  width: 100%;
+  min-height: 28px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+}
 /* JJIE custom nav variables */
 /* Largo nav styles */
 html.nav-open,
@@ -737,10 +746,8 @@ body.admin-bar .sticky-nav-holder {
   .sticky-nav-holder {
     display: none;
   }
-  body.single .sticky-nav-holder.sticky_nav_display_article,
-  body.single .sticky-nav-holder.main_nav_hide_article,
-  body.page .sticky-nav-holder.sticky_nav_display_article,
-  body.page .sticky-nav-holder.main_nav_hide_article {
+  body .sticky-nav-holder.main_nav_hide_article,
+  body .sticky-nav-holder.sticky_nav_display {
     display: block;
   }
 }
