--- a/wp-content/themes/jjie/less/ads.less
+++ b/wp-content/themes/jjie/less/ads.less
@@ -35,3 +35,15 @@
     display: inline;
   }
 }
+
+#homepage-triple-widget {
+  @media @mobile {
+    .span4 {
+      margin: 0 auto 12px;
+      clear: both;
+      padding: 0;
+      width: 300px;
+      float: none;
+    }
+  }
+}
