--- a/wp-content/themes/youth-today/less/ads.less
+++ b/wp-content/themes/youth-today/less/ads.less
@@ -15,3 +15,16 @@
 .widget_doubleclick_widget {
   text-align: center;
 }
+
+@mobile:      ~"only screen and (max-width: 529px)";
+#homepage-triple-widget {
+  @media @mobile {
+    .span4 {
+      margin: 0 auto 12px;
+      clear: both;
+      padding: 0;
+      width: 300px;
+      float: none;
+    }
+  }
+}
