Make homepage triple widget area breakpoint wider

--- a/wp-content/themes/jjie/less/ads.less
+++ b/wp-content/themes/jjie/less/ads.less
@@ -37,7 +37,7 @@
 }
 
 #homepage-triple-widget {
-  @media @mobile {
+  @media @tabletDown {
     .span4 {
       margin: 0 auto 12px;
       clear: both;
