--- a/wp-content/themes/youth-today/less/ads.less
+++ b/wp-content/themes/youth-today/less/ads.less
@@ -16,9 +16,9 @@
   text-align: center;
 }
 
-@mobile:      ~"only screen and (max-width: 529px)";
+@tabletDown:  ~"only screen and (max-width: 979px)";
 #homepage-triple-widget {
-  @media @mobile {
+  @media @tabletDown {
     .span4 {
       margin: 0 auto 12px;
       clear: both;
