--- a/wp-content/themes/youth-today/css/style.css
+++ b/wp-content/themes/youth-today/css/style.css
@@ -324,6 +324,18 @@ li.second-level a:hover {
     display: none;
   }
 }
+#homepage-triple-widget .widget {
+  background-color: transparent;
+}
+@media only screen and (min-width: 980px) {
+  #homepage-triple-widget {
+    margin-bottom: 24px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-top: 1px dotted #aaaaaa;
+    border-bottom: 1px dotted #aaaaaa;
+  }
+}
 @media only screen and (max-width: 979px) {
   #homepage-triple-widget .span4 {
     margin: 0 auto 12px;
@@ -331,6 +343,15 @@ li.second-level a:hover {
     padding: 0;
     width: 300px;
     float: none;
+  }
+  #homepage-triple-widget .span4:first-child {
+    border-top: 1px dotted #aaaaaa;
+  }
+  #homepage-triple-widget .span4 + .span4 {
+    border-top: 1px dotted #aaaaaa;
+  }
+  #homepage-triple-widget .span4:last-child {
+    border-bottom: 1px dotted #aaaaaa;
   }
 }
 .widget,
