Avoid border conflict if there's a sticky post

--- a/wp-content/themes/jjie/less/ads.less
+++ b/wp-content/themes/jjie/less/ads.less
@@ -50,6 +50,12 @@
     padding-bottom: 24px;
     border-top: @border;
     border-bottom: @border;
+
+    // if there is a sticky post above this, avoid double border
+    article + & {
+      border-top: none;
+      padding-top: 0;
+    }
   }
 
   @media @tabletDown {
