--- a/wp-content/themes/jjie/css/style.css
+++ b/wp-content/themes/jjie/css/style.css
@@ -46,6 +46,10 @@
     border-top: 1px dotted #aaaaaa;
     border-bottom: 1px dotted #aaaaaa;
   }
+  article + #homepage-triple-widget {
+    border-top: none;
+    padding-top: 0;
+  }
 }
 @media only screen and (max-width: 979px) {
   #homepage-triple-widget .span4 {
