Remove the Home Middle Ad Zone in JJIE and Youth Today, as it is not planned to be used again.

--- a/wp-content/themes/youth-today/less/ads.less
+++ b/wp-content/themes/youth-today/less/ads.less
@@ -35,6 +35,7 @@
 
 // copy this from Largo
 @tabletDown:  ~"only screen and (max-width: 979px)";
+// these styles are also in jjie
 #homepage-triple-widget {
   .widget {
     background-color: transparent;
