remove DFW advertisement label above this one ad zone, since they're including sponsored in their ads

--- a/wp-content/themes/jjie/css/style.css
+++ b/wp-content/themes/jjie/css/style.css
@@ -69,6 +69,10 @@
     border-bottom: 1px dotted #aaaaaa;
   }
 }
+#homepage-triple-widget .dfw-unit.display-block:before {
+  display: none;
+  content: '';
+}
 /* Largo essentials */
 article,
 aside,
