--- a/wp-content/themes/jjie/less/ads.less
+++ b/wp-content/themes/jjie/less/ads.less
@@ -31,7 +31,7 @@
   display: table-cell;
   vertical-align: middle;
   aside {
-    padding-right: 0;
+    padding: 0;
     display: inline;
   }
   width: auto;
