--- a/wp-content/themes/youth-today/less/ads.less
+++ b/wp-content/themes/youth-today/less/ads.less
@@ -23,7 +23,7 @@
   display: table-cell;
   vertical-align: middle;
   aside {
-    padding-right: 0;
+    padding: 0;
     display: inline;
   }
 }
