--- a/wp-content/themes/jjie/css/style.css
+++ b/wp-content/themes/jjie/css/style.css
@@ -32,7 +32,7 @@
   width: auto;
 }
 #header-ad-zone-container aside {
-  padding-right: 0;
+  padding: 0;
   display: inline;
 }
 #homepage-triple-widget .widget {
